--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "12.6.2",
     "bcrypt": "^5.1.1",
     "chalk": "4.1.0",
+    "cors": "2.8.5",
     "history": "5.0.0",
     "js-cookie": "3.0.0",
+    "jsonwebtoken": "9.0.2",
     "msw": "0.33.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
